Fixed overflow problem

--- a/new-website/css/main.css
+++ b/new-website/css/main.css
@@ -104,7 +104,7 @@ ul li a {
 .hello-wrapper {
     margin-left: -2em;
     margin-top: 14vh;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .hello {
